--- a/HW11 - D3/StarterCode/index.html
+++ b/HW11 - D3/StarterCode/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class = "row">
       <div class ="col-xs-12 col-md-9">
-        <div class ="scatterplot">
+        <div id ="scatterplot">
         </div>
       </div>
     </div>
